force-app/main/default/objects/ccrz__E_FeaturedProductI18N__c/ccrz__E_FeaturedProductI18N__c.object-meta.xml
<CustomObject>
    <description>Locale-specific version of featured product, used for localizing featured product description.</description>
    <label>CC FeaturedProductI18N</label>
    <nameField>
        <label>FeaturedProductI18N Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC FeaturedProductI18Ns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>