force-app/main/default/objects/ccrz__E_FeaturedProductI18N__c/fields/ccrz__Description__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Description__c</fullName>
    <description>Featured Product Description in the language referenced by the locale.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>