force-app/main/default/objects/ccrz__E_FeaturedProductI18N__c/fields/ccrz__FeaturedProduct__c.field-meta.xml
<CustomField>
    <fullName>ccrz__FeaturedProduct__c</fullName>
    <description>Reference to Featured Product being localized.</description>
    <label>CC Featured Product</label>
    <referenceTo>ccrz__E_FeaturedProduct__c</referenceTo>
    <relationshipLabel>FeaturedProductI18Ns</relationshipLabel>
    <relationshipName>FeaturedProductI18Ns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>