force-app/main/default/objects/ccrz__E_FeaturedProductI18N__c/fields/ccrz__Locale__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Locale__c</fullName>
    <description>Locale that is being defined by this entry.</description>
    <label>Locale</label>
    <length>25</length>
    <type>Text</type>
</CustomField>